fixed gap

--- a/popup/AddTask/addTask.css
+++ b/popup/AddTask/addTask.css
@@ -107,7 +107,7 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  gap: 2rem;
+  gap: 0.5rem;
 }
 
 #priorityBtn {
